# legacy-sql-xml-analyzer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: QUICKSTART_CLINE.md
src/legacy_sql_xml_analyzer/: __init__.py  adaptive_prompt.py  agent_loop.py  agent_runners.py  analyzer.py  catalog.py  cli.py  cline_bridge.py  company_prompt_profiles.py  console.py  context_compiler.py  dashboard.py  doctor.py  evolution.py  failure_explainer.py  handoff.py  java_bff.py  java_bff_context.py  java_bff_loop.py  java_bff_runtime.py  java_bff_workflow.py  java_skeletons.py  learning.py  lifecycle.py  llm_provider.py  models.py  phase_engine.py  profile.py  prompt_profiles.py  prompting.py  response_normalizer.py  schemas.py  validation.py  watch_review.py  web.py
tests/: support.py  test_adaptive_prompt.py  test_agent_loop.py  test_analyzer.py  test_cli.py  test_cline_bridge.py  test_company_prompt_profiles.py  test_console.py  test_context_compiler.py  test_doctor.py  test_failure_explainer.py  test_handoff.py  test_java_bff.py  test_java_bff_context.py  test_java_bff_loop.py  test_java_bff_workflow.py  test_llm_provider.py  test_phase_engine.py  test_response_normalizer.py  test_schemas.py  test_watch_review.py
tools/: cline_bridge.py
