[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-sql-xml-analyzer"
version = "0.9.0"
description = "Analyze legacy SQL XML mappings and generate LLM-friendly artifacts."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]

[project.scripts]
legacy-sql-xml-analyzer = "legacy_sql_xml_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
